* Gem tools are now purple
* Prevented animals and mobs from despawning while in view
* Prevented furniture from being pushed over stairs
* Shear loses durability when used on sheep
* The world list should now update if copying or renaming worlds in-game
* Texture pack and skin menu now look the same as every other menu
* Pre-releases are now ignored from version check
* Renamed shear to shears

Minicraft+ version 2.0.7

+ Added sheep shearing
+ Added shear tool
+ Added potatoes
+ Added baked potatoes as food
+ Made zombies drop potatoes
+ Added inventory searcher (F to toggle and Next/Back Page to seek)
+ Added fullscreen mode (default key F11)
+ Added Indonesian localization
+ Added Hungarian localization
+ Added SRV record support; service name is _minicraft (only accessable through code)
+ Added aggregate analytics for various game states and actions
+ Added new skin system with custom skin support
+ Added Built-in Contest Winners' Skins into the Skins Menu
* Sparks (the airwizard bullets) have been optimised
* Fixed picked up dungeon chests
* Tiles now connect to the edge of the world
* Farm tiles will no longer be destroyed if an item is dropped onto it
* Made crops grow slower
* Updated some textures; made wood, apples and gold apples look better
* Made sheep drop beef
* Picking up furniture no longer require stamina
* Mobs no longer target you and attack you when you are in creative mode
* Fixed sound not playing on certain actions
* You can only use axes on wood walls, wood doors, and wood floor
* Shears must be used to destroy wool tiles
- Disabled multiplayer functionality

Minicraft+ version 2.0.6

+ Prevented players from getting stuck in skyholes with a cool animation
* Fixed the creeper's explosion to only hurt mobs if it actually explodes
* Made the quick-save key configurable
+ Added French localization
+ Added more buildings, including abandoned villages
* Let you place floors on clouds